[build-macos-gitlabci] Only reinstall

--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -152,8 +152,8 @@ new-agent_dmg-x64-a7:
   # before_script:
   #   - export RELEASE_VERSION=$RELEASE_VERSION_7
   after_script:
-    - brew install awscli -fv
-    - brew install cryptography -fv
+    - brew install awscli -fv || true
+    - brew install cryptography -fv || true
   script:
     - set -e
     # - !reference [.vault_login]
@@ -163,8 +163,8 @@ new-agent_dmg-x64-a7:
     - |
       export OPENSSL_VERSION=1.1
       echo 'Installing cryptography...'
-      brew uninstall awscli cryptography -fv
-      brew install cryptography -fv
+      # brew uninstall awscli cryptography -fv
+      brew reinstall cryptography -fv
       echo 'Installing openssl...'
       brew install DataDog/datadog-agent-macos-build/openssl@$OPENSSL_VERSION -fv
       brew link --overwrite openssl@$OPENSSL_VERSION
