--- a/.gitlab/binary_build/cws_instrumentation.yml
+++ b/.gitlab/binary_build/cws_instrumentation.yml
@@ -4,8 +4,10 @@
   needs: ["go_mod_tidy_check"]
   script:
     - inv check-go-version
-    - inv -e cws-instrumentation.build
-    - $S3_CP_CMD $CI_PROJECT_DIR/$CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation $S3_ARTIFACTS_URI/datadog-cws-instrumentation/cws-instrumentation.$ARCH
+    - inv -e cws-instrumentation.build --arch-suffix
+  artifacts:
+    paths:
+      - $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.$ARCH
 
 cws_instrumentation-build_amd64:
   extends: .cws_instrumentation-build_common
