--- a/.gitlab/functional_test/include.yml
+++ b/.gitlab/functional_test/include.yml
@@ -6,6 +6,7 @@ include:
   - .gitlab/functional_test/serverless.yml
   - .gitlab/functional_test/regression_detector.yml  
   - .gitlab/functional_test/regression_detector_otel_vs_oss.yml
+  - .gitlab/functional_test/regression_detector_oss_vs_otel.yml
   - .gitlab/functional_test/regression_detector_otlp_vs_oss.yml
   - .gitlab/kernel_matrix_testing/common.yml
   - .gitlab/kernel_matrix_testing/system_probe.yml
