--- a/.gitlab/.pre/include.yml
+++ b/.gitlab/.pre/include.yml
@@ -5,3 +5,4 @@ include:
   - .gitlab/.pre/cancel-prev-pipelines.yml
   - .gitlab/.pre/create_release_qa_cards.yml
   - .gitlab/.pre/gitlab_configuration.yml
+  - .gitlab/.pre/print-rule-variables.yml
