--- a/.gitlab/deploy_containers/conditions.yml
+++ b/.gitlab/deploy_containers/conditions.yml
@@ -34,8 +34,8 @@
   - if: $CI_COMMIT_TAG =~ /^[0-9]+\.[0-9]+\.[0-9]+-rc\.[0-9]+$/
     when: on_success
     variables:
-      AGENT_REPOSITORY: agent-dev
-      IMG_REGISTRIES: dev
+      AGENT_REPOSITORY: agent
+      IMG_REGISTRIES: public
 
 # Rule for job that can be triggered manually on final build, deploy to prod repository on stable branch deploy, else to dev repository
 .on_final:
