--- a/renovate.json
+++ b/renovate.json
@@ -4,10 +4,11 @@
     "customManagers" : [
       {
         "customType": "regex",
-        "fileMatch": [".gitlab-ci.yml"],
+        "fileMatch": [".gitlab-ci.yml", ".circleci/config.yml"],
         "matchStrings": [
           "  DATADOG_AGENT_[^:]*: (?<currentValue>v.*)",
-          "  CI_IMAGE_[^:]*: (?<currentValue>v.*)"
+          "  CI_IMAGE_[^:]*: (?<currentValue>v.*)",
+          "      - image: gcr.io/datadoghq/agent-circleci-runner:(?<currentValue>v.*)"
         ],
         "depNameTemplate": "buildimages",
         "versioningTemplate": "loose",
