--- a/pkg/config/config_template.yaml
+++ b/pkg/config/config_template.yaml
@@ -3305,12 +3305,12 @@ api_key:
 #
 # ecs_metadata_timeout: 500
 
-## @param ecs_task_collection_enabled - boolean - optional - default: false
-## @env DD_ECS_TASK_COLLECTION_ENABLED - boolean - optional - default: false
+## @param ecs_task_collection_enabled - boolean - optional - default: true
+## @env DD_ECS_TASK_COLLECTION_ENABLED - boolean - optional - default: true
 ## The Agent can collect detailed task information from the metadata API exposed by the ECS Agent,
 ## which is used for the orchestrator ECS check.
 #
-# ecs_task_collection_enabled: false
+# ecs_task_collection_enabled: true
 
 {{ end -}}
 {{- if .CRI }}
