--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -139,7 +139,7 @@ agent_dmg-x64-a7:
 
 new-agent_dmg-x64-a7:
   stage: package_build
-  # extends: .macos_gitlab
+  extends: .macos_gitlab
   tags: ["macos:ventura-amd64-test", "specific:true"]
   # tags: ["macos:ventura-arm64-test", "specific:true"] # TODO
   needs: []
@@ -151,36 +151,36 @@ new-agent_dmg-x64-a7:
       - /tmp/celian
   # before_script:
   #   - export RELEASE_VERSION=$RELEASE_VERSION_7
-  after_script:
-    - brew install awscli -fv || true
-    - brew install cryptography -fv || true
+  # after_script:
+  #   - brew install awscli -fv || true
+  #   - brew install cryptography -fv || true
   script:
     - set -e
-    # - !reference [.vault_login]
+    - !reference [.vault_login]
 
-    # Try builder
-    - brew list --formula
-    - |
-      export OPENSSL_VERSION=1.1
-      echo 'Installing cryptography...'
-      # brew uninstall awscli cryptography -fv
-      brew reinstall cryptography -fv
-      echo 'Installing openssl...'
-      brew install DataDog/datadog-agent-macos-build/openssl@$OPENSSL_VERSION -fv
-      brew link --overwrite openssl@$OPENSSL_VERSION
-    - exit
-    - bash .gitlab/package_build/builder_setup.sh
-    - exit
+    # # Try builder
+    # - brew list --formula
+    # - |
+    #   export OPENSSL_VERSION=1.1
+    #   echo 'Installing cryptography...'
+    #   # brew uninstall awscli cryptography -fv
+    #   brew reinstall cryptography -fv
+    #   echo 'Installing openssl...'
+    #   brew install DataDog/datadog-agent-macos-build/openssl@$OPENSSL_VERSION -fv
+    #   brew link --overwrite openssl@$OPENSSL_VERSION
+    # - exit
+    # - bash .gitlab/package_build/builder_setup.sh
+    # - exit
 
-    # Setup builder
-    - |
-      for dependency in $(brew list --formula); do
-        brew remove --force --ignore-dependencies $dependency || echo "Warning: $dependency could not be removed"
-      done
-    - rm -rf /usr/local/lib/ruby
-    - rm -rf /Library/Frameworks/Python.framework/Versions/*
-    # TODO
-    - bash .gitlab/package_build/builder_setup.sh
+    # # Setup builder
+    # - |
+    #   for dependency in $(brew list --formula); do
+    #     brew remove --force --ignore-dependencies $dependency || echo "Warning: $dependency could not be removed"
+    #   done
+    # - rm -rf /usr/local/lib/ruby
+    # - rm -rf /Library/Frameworks/Python.framework/Versions/*
+    # # TODO
+    # - bash .gitlab/package_build/builder_setup.sh
     # Setup
     - |
       export INTEGRATION_WHEELS_CACHE_BUCKET=dd-agent-omnibus
