feat(gitlab): not running static quality gates on merge queue

--- a/.gitlab/functional_test/static_quality_gate.yml
+++ b/.gitlab/functional_test/static_quality_gate.yml
@@ -1,7 +1,8 @@
 static_quality_gates:
   stage: functional_test
   rules:
-    - !reference [.except_release_branch_tagged_commit_and_mq]
+    - !reference [.not_on_release_branch_or_tagged_commit]
+    - !reference [.except_mergequeue]
     - when: on_success
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/docker_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
   tags: ["arch:amd64"]
