--- a/test/new-e2e/tests/otel/otel-agent/testdata/no-dd-exporter-full-config.yml
+++ b/test/new-e2e/tests/otel/otel-agent/testdata/no-dd-exporter-full-config.yml
@@ -70,6 +70,7 @@ exporters:
       cert_file: ""
       cert_pem: '[REDACTED]'
       cipher_suites: []
+      curve_preferences: []
       include_system_ca_certs_pool: false
       insecure: false
       insecure_skip_verify: false
@@ -273,10 +274,14 @@ service:
       readers:
       - pull:
           exporter:
-            additionalproperties: null
             prometheus:
               host: localhost
               port: 8888
+              with_resource_constant_labels:
+                included: []
+              without_scope_info: true
+              without_type_suffix: true
+              without_units: true
     resource: {}
     traces:
       level: Basic
