--- a/.gitlab/codeql_scan/codeql_scan.yml
+++ b/.gitlab/codeql_scan/codeql_scan.yml
@@ -6,10 +6,8 @@ run_codeql_scan:
   image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/ci/datadog-agent-buildimages/system-probe_arm64$DATADOG_AGENT_SYSPROBE_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_SYSPROBE_BUILDIMAGES
   tags: ["arch:arm64"]
   stage: source_test
-  # rules:
-  #   - if: $CI_PIPELINE_SOURCE == "schedule" && $CODE_SCANNING_PIPELINE == "true"
-  #     when: always
-  #   - when: never
+  rules:
+    - when: on_success
   variables:
     ARCH: arm64
     BASE_REF: main
