--- a/repository.datadog.yml
+++ b/repository.datadog.yml
@@ -9,6 +9,13 @@ wait_for_check_timeout_in_minutes: 240
 gitlab_jobs_retry_enable: true
 gitlab_check_enable: true
 skip_labels: true
+branches:
+  /^7\.[0-9]+\.x$/:
+    github_teams_restrictions:
+      - "agent-supply-chain"
+  /^6\.[0-9]+\.x$/:
+    github_teams_restrictions:
+      - "agent-supply-chain"
 ---
 schema-version: v1
 kind: buildimpactanalysis
