--- a/.gitlab/source_test/codeql_scan.yml
+++ b/.gitlab/source_test/codeql_scan.yml
@@ -8,6 +8,7 @@ run_codeql_scan:
   stage: source_test
   rules:
     - when: on_success
+  needs: ["go_deps"]
   variables:
     ARCH: arm64
     BASE_REF: main
@@ -25,5 +26,7 @@ run_codeql_scan:
     SCAN_CONFIGS: --format sarifv2.1.0 --threads 8 --ram 96000 --no-tuple-counting --quiet
     UPLOAD_CONFIGS: -upload_sarif=true
   script:
+    - !reference [.retrieve_linux_go_deps]
+    - inv -e agent.build
     - git clone https://github.com/DataDog/codescanning.git --depth 1 --single-branch --branch=main /tmp/codescanning
     - $CODEQL database create "$CODEQL_DB" $DB_CONFIGS
