--- a/.gitlab/trigger_release/trigger_release.yml
+++ b/.gitlab/trigger_release/trigger_release.yml
@@ -41,6 +41,16 @@ trigger_auto_staging_release:
       when: never
     - !reference [.on_deploy]
 
+trigger_auto_staging_release_on_failure:
+  extends: .agent_release_management_trigger
+  variables:
+    AUTO_RELEASE: "false"
+    TARGET_REPO: staging
+  rules:
+    - if: $CI_COMMIT_TAG =~ /^[0-9]+\.[0-9]+\.[0-9]+-v[0-9]+\.[0-9]+\.[0-9]+(-rc\.[0-9]+){0,1}$/
+      when: never
+    - !reference [.on_deploy_failure]
+
 trigger_manual_prod_release:
   extends: .agent_release_management_trigger
   variables:
@@ -53,6 +63,19 @@ trigger_manual_prod_release:
     - if: $CI_COMMIT_TAG =~ /^[0-9]+\.[0-9]+\.[0-9]+-v[0-9]+\.[0-9]+\.[0-9]+(-rc\.[0-9]+){0,1}$/
       when: never
     - !reference [.on_deploy_stable_or_beta_manual_auto_on_stable]
+
+trigger_manual_prod_release_on_failure:
+  extends: .agent_release_management_trigger
+  variables:
+    AUTO_RELEASE: "false"
+    TARGET_REPO: prod
+    # The jobs in the downstream pipeline will all be manual, so following
+    # the created pipeline would likely cause this job to timeout
+    NO_FOLLOW: "--no-follow"
+  rules:
+    - if: $CI_COMMIT_TAG =~ /^[0-9]+\.[0-9]+\.[0-9]+-v[0-9]+\.[0-9]+\.[0-9]+(-rc\.[0-9]+){0,1}$/
+      when: never
+    - !reference [.on_deploy_stable_on_failure]
 
 include:
   - https://gitlab-templates.ddbuild.io/slack-notifier/v3-sdm/template.yml
