--- a/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/filter.yaml
+++ b/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/filter.yaml
@@ -21,6 +21,17 @@ apm_config:
             language: "java"
         ddTraceVersions:
           java: "v1"
+      - name: "Enabled Prod Namespaces"
+        namespaceSelector:
+          matchLabels:
+            tracing: "yes"
+          matchExpressions:
+            - key: "env"
+              operator: "In"
+              values:
+                - "prod"
+        ddTraceVersions:
+          dotnet: "v1"
       - name: "Unknown Language"
         podSelector:
           matchLabels:
