--- a/test/static/static_quality_gates.yml
+++ b/test/static/static_quality_gates.yml
@@ -7,14 +7,30 @@ static_quality_gate_docker_agent_amd64:
   max_on_disk_size: "942.69 MiB"
 
 static_quality_gate_docker_agent_arm64:
-  max_on_wire_size: "321.56 MiB"
-  max_on_disk_size: "942.69 MiB"
+  max_on_wire_size: "304.56 MiB"
+  max_on_disk_size: "952.69 MiB"
 
 static_quality_gate_docker_agent_jmx_amd64:
-  max_on_wire_size: "321.56 MiB"
-  max_on_disk_size: "942.69 MiB"
+  max_on_wire_size: "395.8 MiB"
+  max_on_disk_size: "1137.37 MiB"
 
 static_quality_gate_docker_agent_jmx_arm64:
-  max_on_wire_size: "321.56 MiB"
-  max_on_disk_size: "942.69 MiB"
+  max_on_wire_size: "375.54 MiB"
+  max_on_disk_size: "1137.74 MiB"
+
+static_quality_gate_docker_dogstatsd_amd64:
+  max_on_wire_size: "395.8 MiB"
+  max_on_disk_size: "1137.37 MiB"
+
+static_quality_gate_docker_dogstatsd_arm64:
+  max_on_wire_size: "375.54 MiB"
+  max_on_disk_size: "1137.74 MiB"
+
+static_quality_gate_docker_cluster_agent_amd64:
+  max_on_wire_size: "395.8 MiB"
+  max_on_disk_size: "1137.37 MiB"
+
+static_quality_gate_docker_cluster_agent_arm64:
+  max_on_wire_size: "375.54 MiB"
+  max_on_disk_size: "1137.74 MiB"
 
