--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -155,11 +155,12 @@ new-agent_dmg-x64-a7:
   #   - export RELEASE_VERSION=$RELEASE_VERSION_7
   after_script:
     - brew install awscli -fv || true
-    - brew install cryptography -fv || true
+    - brew link --overwrite awscli || true
+    # - brew install cryptography -fv || true
   script:
     # - set -e
     - set +e
-    - brew remove --force --ignore-dependencies --formula awscli -v
+    - sudo brew remove --force --ignore-dependencies --formula awscli -v
     - exit 1
     # - !reference [.vault_login]
 
