--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -140,10 +140,9 @@ agent_dmg-x64-a7:
 
 new-agent_dmg-x64-a7:
   stage: package_build
-  # TODO
-  # extends: .macos_gitlab
-  # tags: ["macos:ventura-amd64-test", "specific:true"]
-  tags: ["macos:ventura-arm64-test", "specific:true"] # TODO
+  extends: .macos_gitlab
+  tags: ["macos:ventura-amd64-test", "specific:true"]
+  # tags: ["macos:ventura-arm64-test", "specific:true"] # TODO
   needs: []
   timeout: 6h
   artifacts:
@@ -151,41 +150,18 @@ new-agent_dmg-x64-a7:
     paths:
       # - $OMNIBUS_PACKAGE_DIR
       - /tmp/celian
-  # before_script:
-  #   - export RELEASE_VERSION=$RELEASE_VERSION_7
-  after_script:
-    # - brew reinstall libidn2 -fv || true
-    # - brew link --overwrite libidn2 || true
-    - brew reinstall awscli -fv || true
-    - brew link --overwrite awscli || true
-    # - which aws || true
-    # - brew install cryptography -fv || true
+  before_script:
+    - export RELEASE_VERSION=$RELEASE_VERSION_7
+  # after_script:
+  #   # - brew reinstall libidn2 -fv || true
+  #   # - brew link --overwrite libidn2 || true
+  #   - brew reinstall awscli -fv || true
+  #   - brew link --overwrite awscli || true
+  #   # - which aws || true
+  #   # - brew install cryptography -fv || true
   script:
-    # - set -e
-    - set +e
-    - brew tap
-    - which datadog-agent
-    - which aws
-    - aws --help
-    - brew remove --force --ignore-dependencies --formula awscli -v
-    - brew reinstall awscli -fv
-    - brew link --overwrite awscli
-    - which aws
-    - aws --help
-    # - brew remove --force --ignore-dependencies --formula libidn2 -v
-    # - brew uses gettext --installed
-    # - brew info gettext
-    # - brew list --formula
-    # - brew uses awscli --installed
-    # - brew info awscli
-    # - which aws
-    # - brew unlink awscli -nv
-    # - brew unlink awscli -v
-    # - which aws
-    # - brew remove --force --ignore-dependencies --formula awscli -v
-    # - which aws
-    - exit 1
-    # - !reference [.vault_login]
+    - set -e
+    - !reference [.vault_login]
 
     # # Try builder
     # - brew list --formula
